[gd_scene format=3 uid="uid://dxf8p3k2nqt7a"]

[ext_resource type="Script" path="res://scripts/GameOver.gd" id="1_gameover"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_gameover")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -90.0
offset_right = 150.0
offset_bottom = 90.0
alignment = 1

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "GAME OVER"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="VBox"]
layout_mode = 2
text = "SCORE: 0"
horizontal_alignment = 1

[node name="RetryBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "RETRY"

[node name="MenuBtn" type="Button" parent="VBox"]
layout_mode = 2
text = "MENU"
